update gptNodeHandler to handle better prompts and update configuration of gptservice