@@ -2,17 +2,23 @@ package ma.rh.ai.hr_workflow.execution.handler;
 
 import org.springframework.stereotype.Component;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import ma.rh.ai.hr_workflow.execution.model.NodeInstance;
 import ma.rh.ai.hr_workflow.integration.gpt.service.GptService;
 import ma.rh.ai.hr_workflow.workflow.model.Node;
 import ma.rh.ai.hr_workflow.workflow.model.NodeType;
 
+@Slf4j
 @Component
 @RequiredArgsConstructor
 public class GptNodeHandler implements NodeHandler {
 
     private final GptService gptService;
+    private final ObjectMapper objectMapper;
 
     @Override
     public NodeType getType() {
@@ -22,31 +28,38 @@ public class GptNodeHandler implements NodeHandler {
     @Override
     public String execute(Node node, NodeInstance nodeInstance) throws Exception {
         String configJson = node.getConfigJson();
-        String nodeInputData = nodeInstance.getInputData(); // Data from previous node (e.g., DRIVE)
-        String workflowInputData = nodeInstance.getWorkflowInstance().getInputData(); // Original workflow input (filtering criteria)
-        
-        // Combine both inputs for the GPT analysis
-        String combinedInput = combineInputs(workflowInputData, nodeInputData);
-        
-        String result = gptService.analyze(configJson, combinedInput);
-        
-        return result;
+        String nodeInputData = nodeInstance.getInputData();
+        String workflowInputData = nodeInstance.getWorkflowInstance().getInputData();
+
+        String inputForGpt;
+
+        if (isDriveCombinedOutput(nodeInputData)) {
+            log.info("✅ GPT Handler: DRIVE already combined prompt + CVs — passing through");
+            inputForGpt = nodeInputData;
+        } else {
+            log.info("⚠️ GPT Handler: No combined DRIVE output — using legacy merge");
+            inputForGpt = legacyMerge(workflowInputData, nodeInputData);
+        }
+
+        return gptService.analyze(configJson, inputForGpt);
     }
 
-    /**
-     * Combine workflow input data (filtering criteria) with node input data (candidate data)
-     */
-    private String combineInputs(String workflowInputData, String nodeInputData) {
-        StringBuilder combined = new StringBuilder();
-        
-        if (workflowInputData != null && !workflowInputData.trim().isEmpty()) {
-            combined.append("FILTERING_CRITERIA:").append(workflowInputData).append("\n\n");
+    private boolean isDriveCombinedOutput(String data) {
+        if (data == null || data.isBlank() || !data.trim().startsWith("{")) return false;
+        try {
+            JsonNode root = objectMapper.readTree(data.trim());
+            return root.has("originalInput") && root.has("cvData");
+        } catch (Exception e) {
+            return false;
         }
-        
-        if (nodeInputData != null && !nodeInputData.trim().isEmpty()) {
-            combined.append("CANDIDATE_DATA:").append(nodeInputData);
-        }
-        
-        return combined.toString();
+    }
+
+    private String legacyMerge(String workflowInput, String nodeInput) {
+        StringBuilder sb = new StringBuilder();
+        if (workflowInput != null && !workflowInput.isBlank())
+            sb.append("FILTERING_CRITERIA:").append(workflowInput).append("\n\n");
+        if (nodeInput != null && !nodeInput.isBlank())
+            sb.append("CANDIDATE_DATA:").append(nodeInput);
+        return sb.toString();
     }
 }
